fix alignment in partrners

--- a/Web/wwwroot/css/output.css
+++ b/Web/wwwroot/css/output.css
@@ -229,20 +229,8 @@
   .inset-y-0 {
     inset-block: calc(var(--spacing) * 0);
   }
-  .top-1\/3 {
-    top: calc(1/3 * 100%);
-  }
-  .top-1\/4 {
-    top: calc(1/4 * 100%);
-  }
-  .top-3\/4 {
-    top: calc(3/4 * 100%);
-  }
   .top-12 {
     top: calc(var(--spacing) * 12);
-  }
-  .top-22 {
-    top: calc(var(--spacing) * 22);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -258,9 +246,6 @@
   }
   .bottom-1 {
     bottom: calc(var(--spacing) * 1);
-  }
-  .z-1 {
-    z-index: 1;
   }
   .z-3 {
     z-index: 3;
@@ -343,9 +328,6 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
-  .h-22 {
-    height: calc(var(--spacing) * 22);
-  }
   .h-\[220px\] {
     height: 220px;
   }
@@ -364,18 +346,6 @@
   .min-h-\[350px\] {
     min-height: 350px;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
-  }
-  .w-1\/3 {
-    width: calc(1/3 * 100%);
-  }
-  .w-1\/6 {
-    width: calc(1/6 * 100%);
-  }
   .w-2\/2 {
     width: calc(2/2 * 100%);
   }
@@ -390,12 +360,6 @@
   }
   .w-8\/12 {
     width: calc(8/12 * 100%);
-  }
-  .w-22 {
-    width: calc(var(--spacing) * 22);
-  }
-  .w-32 {
-    width: calc(var(--spacing) * 32);
   }
   .w-36 {
     width: calc(var(--spacing) * 36);
@@ -412,20 +376,11 @@
   .max-w-32 {
     max-width: calc(var(--spacing) * 32);
   }
-  .max-w-40 {
-    max-width: calc(var(--spacing) * 40);
-  }
   .max-w-58 {
     max-width: calc(var(--spacing) * 58);
   }
-  .max-w-68 {
-    max-width: calc(var(--spacing) * 68);
-  }
   .max-w-76 {
     max-width: calc(var(--spacing) * 76);
-  }
-  .max-w-sm {
-    max-width: var(--container-sm);
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
@@ -548,9 +503,6 @@
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
   }
-  .py-24 {
-    padding-block: calc(var(--spacing) * 24);
-  }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
@@ -562,9 +514,6 @@
   }
   .pr-10 {
     padding-right: calc(var(--spacing) * 10);
-  }
-  .pb-4 {
-    padding-bottom: calc(var(--spacing) * 4);
   }
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
@@ -710,11 +659,6 @@
       grid-column-end: 7;
     }
   }
-  .md\:-mb-12 {
-    @media (width >= 48rem) {
-      margin-bottom: calc(var(--spacing) * -12);
-    }
-  }
   .md\:-mb-18 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * -18);
@@ -738,11 +682,6 @@
   .md\:h-\[500px\] {
     @media (width >= 48rem) {
       height: 500px;
-    }
-  }
-  .md\:w-1\/2 {
-    @media (width >= 48rem) {
-      width: calc(1/2 * 100%);
     }
   }
   .md\:w-2\/3 {
@@ -780,11 +719,6 @@
       align-items: flex-start;
     }
   }
-  .md\:justify-center {
-    @media (width >= 48rem) {
-      justify-content: center;
-    }
-  }
   .md\:self-start {
     @media (width >= 48rem) {
       align-self: flex-start;
@@ -800,11 +734,6 @@
       padding-inline: calc(var(--spacing) * 36);
     }
   }
-  .md\:py-8 {
-    @media (width >= 48rem) {
-      padding-block: calc(var(--spacing) * 8);
-    }
-  }
   .md\:text-left {
     @media (width >= 48rem) {
       text-align: left;
@@ -818,26 +747,6 @@
   .lg\:-mt-34 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * -34);
-    }
-  }
-  .lg\:-mb-12 {
-    @media (width >= 64rem) {
-      margin-bottom: calc(var(--spacing) * -12);
-    }
-  }
-  .lg\:-mb-24 {
-    @media (width >= 64rem) {
-      margin-bottom: calc(var(--spacing) * -24);
-    }
-  }
-  .lg\:-mb-34 {
-    @media (width >= 64rem) {
-      margin-bottom: calc(var(--spacing) * -34);
-    }
-  }
-  .lg\:block {
-    @media (width >= 64rem) {
-      display: block;
     }
   }
   .lg\:flex {
